# djangowebsite

./: pyproject.toml
mysite/: settings.py  urls.py  views.py
mysite/post/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_slug.py  0004_comment.py  0005_rename_post_comment_created_409d9a_idx_post_commen_created_409d9a_idx_and_more.py
mysite/post/templates/post/: base.html  comment.html  detail.html  email_share.html  index.html  post_detail.html  post_form.html
mysite/post/templates/post/components/: buttons.html  comment_form.html
mysite/post/templatetags/: post_tags.py
mysite/templates/: base.html  index.html
mysite/templates/components/: carousel.html  navbar.html  pagination.html
mysite/templates/post/: post_detail.html
mysite/templates/posts/: index.html
mysite/templates/user/: index.html
mysite/user/: admin.py  apps.py  models.py  urls.py  views.py
mysite/user/migrations/: 0001_initial.py
mysite/user/templates/user/: base.html  index.html  profile.html
mysite/user/templates/user/components/: back_button.html
